[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/GUI/UI/PauseScreen/Image/black.jpg" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/Game.gd" type="Script" id=2]

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_right = 253.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "SALVAR"

[node name="LoadButton" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_left = 257.0
margin_right = 510.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "CARREGAR"

[node name="Return" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_left = 514.0
margin_right = 767.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "VOLTAR"

[node name="Button" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_left = 771.0
margin_right = 1024.0
margin_bottom = 100.0
size_flags_horizontal = 3
text = "TESTAR"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
margin_left = 20.0
margin_top = 13.0
margin_right = 20.0
margin_bottom = 27.0
[connection signal="pressed" from="CanvasLayer/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
